@@ -1,0 +1,12 @@
+There have been significant changes in bogofilter's use of Berkeley
+DB.  Bogofilter now uses the Transactional mode to ensure database
+integrity.  If you are updating from a bogofilter version older than
+0.93.0, you may need to configure your database environment.
+
+If you encounter messages like:
+
+    "Lock table is out of available locks"
+or  "Lock table is out of available object entries"
+
+then you need to configure your database environment.  The FAQ has
+some information on this problem and file README.db has full details.
